Kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netflix-deny-egress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: netflix
  policyTypes:
    - Egress
  egress: []
